--- a/TCB_Second_Review/TCB_Second_Review.vcxproj
+++ b/TCB_Second_Review/TCB_Second_Review.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{ca7f005d-728c-4758-8300-b06c329ea3d4}</ProjectGuid>
     <RootNamespace>TCBSecondReview</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Chapter1_3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +129,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Chapter1_3.cpp" />
-    <ClCompile Include="Chapter1_4.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
